// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays button when no container is available 1`] = `
<div
  className="fill-content container-fluid"
>
  <div
    className="fill-row row"
  >
    <div
      className="full-size col-sm-6"
    >
      <div
        className="code-editor"
      >
        <div
          className="flex-container"
        >
          <mock-MonacoEditor
            editorDidMount={[Function]}
            language="cpp"
            onChange={[Function]}
            options={
              Object {
                "selectOnLineNumbers": true,
              }
            }
            value="static void StringCreation(benchmark::State& state) {
  // Code inside this loop is measured repeatedly
  for (auto _ : state) {
    std::string created_string(\\"hello\\");
    // Make sure the variable is not optimized away by compiler
    benchmark::DoNotOptimize(created_string);
  }
}
// Register the function as a benchmark
BENCHMARK(StringCreation);

static void StringCopy(benchmark::State& state) {
  // Code before the loop is not measured
  std::string x = \\"hello\\";
  for (auto _ : state) {
    std::string copy(x);
  }
}
BENCHMARK(StringCopy);
"
          />
        </div>
      </div>
    </div>
    <div
      className="flex-container col-sm-6"
    >
      <div
        className="fill-content"
      >
        <div
          className="fixed-content"
        >
          <div
            className="my-2 card"
          >
            <div
              className="card-body"
            >
              <div
                className="btn-toolbar"
                role="toolbar"
              >
                <button
                  className="btn btn-primary"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 16 16"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4.406 1.342A5.53 5.53 0 0 1 8 0c2.69 0 4.923 2 5.166 4.579C14.758 4.804 16 6.137 16 7.773 16 9.569 14.502 11 12.687 11H10a.5.5 0 0 1 0-1h2.688C13.979 10 15 8.988 15 7.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 2.825 10.328 1 8 1a4.53 4.53 0 0 0-2.941 1.1c-.757.652-1.153 1.438-1.153 2.055v.448l-.445.049C2.064 4.805 1 5.952 1 7.318 1 8.785 2.23 10 3.781 10H6a.5.5 0 0 1 0 1H3.781C1.708 11 0 9.366 0 7.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383z"
                    />
                    <path
                      d="M7.646 15.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 14.293V5.5a.5.5 0 0 0-1 0v8.793l-2.146-2.147a.5.5 0 0 0-.708.708l3 3z"
                    />
                  </svg>
                   Pull compilers
                </button>
              </div>
              <hr
                className="config-separator"
              />
              <div
                className="justify-content-between btn-toolbar"
                role="toolbar"
              >
                <form
                  className="form-inline"
                >
                  <button
                    className="mr-2 btn btn-primary"
                    disabled={false}
                    id="Run"
                    onClick={[Function]}
                    type="button"
                  >
                     
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42A8.962 8.962 0 0012 4c-4.97 0-9 4.03-9 9s4.02 9 9 9a8.994 8.994 0 007.03-14.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
                      />
                    </svg>
                     Run Benchmark
                  </button>
                  <div
                    className="mr-2 custom-control custom-checkbox"
                  >
                    <input
                      checked={true}
                      className="custom-control-input"
                      disabled={false}
                      id="disassembly"
                      onChange={[Function]}
                      type="checkbox"
                    />
                    <label
                      className="custom-control-label"
                      htmlFor="disassembly"
                      title=""
                    >
                      Record disassembly
                    </label>
                  </div>
                </form>
                <form
                  className="form-inline"
                >
                  <button
                    className="mr-2 btn btn-outline-dark"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    type="button"
                  >
                    <img
                      alt="Open in Compiler Explorer"
                      className="line-img"
                      src="Compiler-Explorer.svg"
                    />
                  </button>
                  <button
                    className="mr-2 btn btn-outline-dark"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    type="button"
                  >
                    <img
                      alt="Open in CPP Insights"
                      className="line-img"
                      src="cppinsights.svg"
                    />
                  </button>
                  <button
                    className="mr-2 btn btn-outline-dark"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    type="button"
                  >
                    <img
                      alt="Open in Build Bench"
                      className="line-img"
                      src="bb.svg"
                    />
                  </button>
                </form>
              </div>
            </div>
          </div>
        </div>
        <div
          className="watermark"
        >
          <svg
            className="watermark2"
            style={
              Object {
                "fill": "#26595430",
              }
            }
            title="Run with Quick Bench!"
          >
            qb.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`displays id with annotations 1`] = `
<div
  className="fill-content container-fluid"
>
  <div
    className="fill-row row"
  >
    <div
      className="full-size col-sm-6"
    >
      <div
        className="code-editor"
      >
        <div
          className="flex-container"
        >
          <mock-MonacoEditor
            editorDidMount={[Function]}
            language="cpp"
            onChange={[Function]}
            options={
              Object {
                "selectOnLineNumbers": true,
              }
            }
            value="static void StringCreation(benchmark::State& state) {
  // Code inside this loop is measured repeatedly
  for (auto _ : state) {
    std::string created_string(\\"hello\\");
    // Make sure the variable is not optimized away by compiler
    benchmark::DoNotOptimize(created_string);
  }
}
// Register the function as a benchmark
BENCHMARK(StringCreation);

static void StringCopy(benchmark::State& state) {
  // Code before the loop is not measured
  std::string x = \\"hello\\";
  for (auto _ : state) {
    std::string copy(x);
  }
}
BENCHMARK(StringCopy);
"
          />
        </div>
      </div>
    </div>
    <div
      className="flex-container col-sm-6"
    >
      <div
        className="fill-content"
      >
        <div
          className="fixed-content"
        >
          <div
            className="my-2 card"
          >
            <div
              className="card-body"
            >
              <div
                className="btn-toolbar"
                role="toolbar"
              >
                <div
                  className="mr-2 dropdown"
                >
                  <button
                    aria-expanded={false}
                    aria-haspopup={true}
                    className="dropdown-toggle btn btn-outline-dark"
                    disabled={false}
                    id="compiler"
                    onClick={[Function]}
                    type="button"
                  >
                    compiler = Clang 10.0
                  </button>
                </div>
                <div
                  className="mr-2 dropdown"
                >
                  <button
                    aria-expanded={false}
                    aria-haspopup={true}
                    className="dropdown-toggle btn btn-outline-dark"
                    disabled={false}
                    id="language"
                    onClick={[Function]}
                    type="button"
                  >
                    std = c++20
                  </button>
                </div>
                <div
                  className="mr-2 dropdown"
                >
                  <button
                    aria-expanded={false}
                    aria-haspopup={true}
                    className="dropdown-toggle btn btn-outline-dark"
                    disabled={false}
                    id="optim"
                    onClick={[Function]}
                    type="button"
                  >
                    optim = O3
                  </button>
                </div>
                <div
                  className="dropdown"
                >
                  <button
                    aria-expanded={false}
                    aria-haspopup={true}
                    className="dropdown-toggle btn btn-outline-dark"
                    disabled={false}
                    id="libc"
                    onClick={[Function]}
                    type="button"
                  >
                    STL = libstdc++(GNU)
                  </button>
                </div>
              </div>
              <hr
                className="config-separator"
              />
              <div
                className="justify-content-between btn-toolbar"
                role="toolbar"
              >
                <form
                  className="form-inline"
                >
                  <button
                    className="mr-2 btn btn-primary"
                    disabled={false}
                    id="Run"
                    onClick={[Function]}
                    type="button"
                  >
                     
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42A8.962 8.962 0 0012 4c-4.97 0-9 4.03-9 9s4.02 9 9 9a8.994 8.994 0 007.03-14.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
                      />
                    </svg>
                     Run Benchmark
                  </button>
                  <div
                    className="mr-2 custom-control custom-checkbox"
                  >
                    <input
                      checked={true}
                      className="custom-control-input"
                      disabled={false}
                      id="disassembly"
                      onChange={[Function]}
                      type="checkbox"
                    />
                    <label
                      className="custom-control-label"
                      htmlFor="disassembly"
                      title=""
                    >
                      Record disassembly
                    </label>
                  </div>
                  <div
                    className="custom-control custom-checkbox"
                  >
                    <input
                      checked={false}
                      className="custom-control-input"
                      disabled={false}
                      id="clean-cache"
                      onChange={[Function]}
                      type="checkbox"
                    />
                    <label
                      className="custom-control-label"
                      htmlFor="clean-cache"
                      title=""
                    >
                      Clear cached results
                    </label>
                  </div>
                </form>
                <form
                  className="form-inline"
                >
                  <button
                    className="mr-2 btn btn-outline-dark"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    type="button"
                  >
                    <img
                      alt="Open in Compiler Explorer"
                      className="line-img"
                      src="Compiler-Explorer.svg"
                    />
                  </button>
                  <button
                    className="mr-2 btn btn-outline-dark"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    type="button"
                  >
                    <img
                      alt="Open in CPP Insights"
                      className="line-img"
                      src="cppinsights.svg"
                    />
                  </button>
                  <button
                    className="mr-2 btn btn-outline-dark"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    type="button"
                  >
                    <img
                      alt="Open in Build Bench"
                      className="line-img"
                      src="bb.svg"
                    />
                  </button>
                </form>
              </div>
            </div>
          </div>
        </div>
        <div
          className="nav nav-tabs"
          onKeyDown={[Function]}
          role="tablist"
        >
          <div
            className="nav-item"
          >
            <a
              aria-selected={true}
              className="nav-link active"
              data-rb-event-key="charts"
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="tab"
            >
              Charts
            </a>
          </div>
          <div
            className="nav-item"
          >
            <a
              aria-selected={false}
              className="nav-link"
              data-rb-event-key="asm"
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="tab"
            >
              Assembly
            </a>
          </div>
        </div>
        <div
          className="fill-content tab-content"
        >
          <div
            aria-hidden={false}
            aria-labelledby={null}
            className="fade fill-content tab-pane active show"
            id={null}
            role="tabpanel"
          >
            <mock-TimeChart
              afterTooltip={true}
              colors={
                Array [
                  Array [
                    "#5ed9cd",
                    "#f5b5c0",
                  ],
                ]
              }
              data={
                Array [
                  Array [
                    4.977504785737881,
                    14.969946162155678,
                  ],
                ]
              }
              dataLabels={
                Array [
                  "cpu_time",
                ]
              }
              fill={true}
              id="abcd"
              labels={
                Array [
                  "StringCreation",
                  "StringCopy",
                ]
              }
              legend={false}
              less="faster"
              more="slower"
              title={
                Array [
                  "ratio (CPU time / Noop time)",
                  "Lower is faster",
                ]
              }
              type="bar"
              xaxis="bar"
              yaxis="linear"
            >
              <div
                className="force-cb custom-control custom-checkbox custom-control-inline"
              >
                <input
                  checked={false}
                  className="custom-control-input"
                  disabled={false}
                  id="Noop"
                  onChange={[Function]}
                  type="checkbox"
                />
                <label
                  className="custom-control-label"
                  htmlFor="Noop"
                  title=""
                >
                  Show Noop bar
                </label>
              </div>
            </mock-TimeChart>
          </div>
          <div
            aria-hidden={true}
            aria-labelledby={null}
            className="fade fill-content tab-pane"
            id={null}
            role="tabpanel"
          >
            <nav
              className="nav nav-tabs"
              onKeyDown={[Function]}
              role="tablist"
            />
            <div
              className="tab-content"
            />
            <div
              className="flex-container"
            >
              <mock-MonacoEditor
                editorDidMount={[Function]}
                language="asm"
                options={
                  Object {
                    "lineNumbers": [Function],
                    "lineNumbersMinChars": 10,
                    "readOnly": true,
                    "selectOnLineNumbers": true,
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`displays id without annotations 1`] = `
<div
  className="fill-content container-fluid"
>
  <div
    className="fill-row row"
  >
    <div
      className="full-size col-sm-6"
    >
      <div
        className="code-editor"
      >
        <div
          className="flex-container"
        >
          <mock-MonacoEditor
            editorDidMount={[Function]}
            language="cpp"
            onChange={[Function]}
            options={
              Object {
                "selectOnLineNumbers": true,
              }
            }
            value="static void StringCreation(benchmark::State& state) {
  // Code inside this loop is measured repeatedly
  for (auto _ : state) {
    std::string created_string(\\"hello\\");
    // Make sure the variable is not optimized away by compiler
    benchmark::DoNotOptimize(created_string);
  }
}
// Register the function as a benchmark
BENCHMARK(StringCreation);

static void StringCopy(benchmark::State& state) {
  // Code before the loop is not measured
  std::string x = \\"hello\\";
  for (auto _ : state) {
    std::string copy(x);
  }
}
BENCHMARK(StringCopy);
"
          />
        </div>
      </div>
    </div>
    <div
      className="flex-container col-sm-6"
    >
      <div
        className="fill-content"
      >
        <div
          className="fixed-content"
        >
          <div
            className="my-2 card"
          >
            <div
              className="card-body"
            >
              <div
                className="btn-toolbar"
                role="toolbar"
              >
                <div
                  className="mr-2 dropdown"
                >
                  <button
                    aria-expanded={false}
                    aria-haspopup={true}
                    className="dropdown-toggle btn btn-outline-dark"
                    disabled={false}
                    id="compiler"
                    onClick={[Function]}
                    type="button"
                  >
                    compiler = GCC 8.3
                  </button>
                </div>
                <div
                  className="mr-2 dropdown"
                >
                  <button
                    aria-expanded={false}
                    aria-haspopup={true}
                    className="dropdown-toggle btn btn-outline-dark"
                    disabled={false}
                    id="language"
                    onClick={[Function]}
                    type="button"
                  >
                    std = c++17
                  </button>
                </div>
                <div
                  className="mr-2 dropdown"
                >
                  <button
                    aria-expanded={false}
                    aria-haspopup={true}
                    className="dropdown-toggle btn btn-outline-dark"
                    disabled={false}
                    id="optim"
                    onClick={[Function]}
                    type="button"
                  >
                    optim = O2
                  </button>
                </div>
                <div
                  className="dropdown"
                >
                  <button
                    aria-expanded={false}
                    aria-haspopup={true}
                    className="dropdown-toggle btn btn-outline-dark"
                    disabled={true}
                    id="libc"
                    onClick={[Function]}
                    type="button"
                  >
                    STL = libstdc++(GNU)
                  </button>
                </div>
              </div>
              <hr
                className="config-separator"
              />
              <div
                className="justify-content-between btn-toolbar"
                role="toolbar"
              >
                <form
                  className="form-inline"
                >
                  <button
                    className="mr-2 btn btn-primary"
                    disabled={false}
                    id="Run"
                    onClick={[Function]}
                    type="button"
                  >
                     
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42A8.962 8.962 0 0012 4c-4.97 0-9 4.03-9 9s4.02 9 9 9a8.994 8.994 0 007.03-14.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
                      />
                    </svg>
                     Run Benchmark
                  </button>
                  <div
                    className="mr-2 custom-control custom-checkbox"
                  >
                    <input
                      checked={false}
                      className="custom-control-input"
                      disabled={false}
                      id="disassembly"
                      onChange={[Function]}
                      type="checkbox"
                    />
                    <label
                      className="custom-control-label"
                      htmlFor="disassembly"
                      title=""
                    >
                      Record disassembly
                    </label>
                  </div>
                  <div
                    className="custom-control custom-checkbox"
                  >
                    <input
                      checked={false}
                      className="custom-control-input"
                      disabled={false}
                      id="clean-cache"
                      onChange={[Function]}
                      type="checkbox"
                    />
                    <label
                      className="custom-control-label"
                      htmlFor="clean-cache"
                      title=""
                    >
                      Clear cached results
                    </label>
                  </div>
                </form>
                <form
                  className="form-inline"
                >
                  <button
                    className="mr-2 btn btn-outline-dark"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    type="button"
                  >
                    <img
                      alt="Open in Compiler Explorer"
                      className="line-img"
                      src="Compiler-Explorer.svg"
                    />
                  </button>
                  <button
                    className="mr-2 btn btn-outline-dark"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    type="button"
                  >
                    <img
                      alt="Open in CPP Insights"
                      className="line-img"
                      src="cppinsights.svg"
                    />
                  </button>
                  <button
                    className="mr-2 btn btn-outline-dark"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    type="button"
                  >
                    <img
                      alt="Open in Build Bench"
                      className="line-img"
                      src="bb.svg"
                    />
                  </button>
                </form>
              </div>
            </div>
          </div>
        </div>
        <div
          className="fill-content tab-content"
        >
          <div
            aria-hidden={false}
            aria-labelledby={null}
            className="fade fill-content tab-pane active show"
            id={null}
            role="tabpanel"
          >
            <mock-TimeChart
              afterTooltip={true}
              colors={
                Array [
                  Array [
                    "#5ed9cd",
                    "#f5b5c0",
                  ],
                ]
              }
              data={
                Array [
                  Array [
                    4.977504785737881,
                    14.969946162155678,
                  ],
                ]
              }
              dataLabels={
                Array [
                  "cpu_time",
                ]
              }
              fill={true}
              id="abcd"
              labels={
                Array [
                  "StringCreation",
                  "StringCopy",
                ]
              }
              legend={false}
              less="faster"
              more="slower"
              title={
                Array [
                  "ratio (CPU time / Noop time)",
                  "Lower is faster",
                ]
              }
              type="bar"
              xaxis="bar"
              yaxis="linear"
            >
              <div
                className="force-cb custom-control custom-checkbox custom-control-inline"
              >
                <input
                  checked={false}
                  className="custom-control-input"
                  disabled={false}
                  id="Noop"
                  onChange={[Function]}
                  type="checkbox"
                />
                <label
                  className="custom-control-label"
                  htmlFor="Noop"
                  title=""
                >
                  Show Noop bar
                </label>
              </div>
            </mock-TimeChart>
          </div>
          <div
            aria-hidden={true}
            aria-labelledby={null}
            className="fade fill-content tab-pane"
            id={null}
            role="tabpanel"
          >
            <nav
              className="nav nav-tabs"
              onKeyDown={[Function]}
              role="tablist"
            />
            <div
              className="tab-content"
            />
            <div
              className="flex-container"
            >
              <mock-MonacoEditor
                editorDidMount={[Function]}
                language="asm"
                options={
                  Object {
                    "lineNumbers": [Function],
                    "lineNumbersMinChars": 10,
                    "readOnly": true,
                    "selectOnLineNumbers": true,
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
